src/test/ReadOnly/ReadOnly.expected
error: ReadOnly.panda:10:11: 'ReadOnly.test' may not be modified
1 error
