src/test/ReadOnly/ReadOnly.panda
class ReadOnly {
    @readonly
    var test:Int
}

class Test {
    @class
    method main() {
        var r := ReadOnly()
        r.test := 5
        Console.writeLine(r.test)
    }
}